--- a/README
+++ b/README
@@ -1,19 +1,35 @@
 Sidekiq Example
 ========================
 
-This application was generated with the rails_apps_composer gem:
-https://github.com/RailsApps/rails_apps_composer
-provided by the RailsApps Project:
-http://railsapps.github.io/
+Web apps should do high-resource tasks in the background, for such resources as
+memory, CPU, disk I/O, and network I/O. Some user requests may result in
+queueing a background task, such as
 
-________________________
+* sending email
+* sending SMS
+* anything involving a call to an external API
+* long database queries
+* generating formatted reports
 
-Recipes:
-["apps4", "controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
+There may also be recurring tasks like daily reports, purging old or inactive
+records from the database, or monthly billing. Those can be set up as cron
+jobs, but that requires updating yet another system when the intervals change,
+or another task needs to be added.
 
-Preferences:
-{:git=>true, :apps4=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"sqlite", :templates=>"haml", :unit_test=>"rspec", :integration=>"rspec-capybara", :continuous_testing=>"guard", :fixtures=>"none", :frontend=>"foundation5", :email=>"smtp", :authentication=>"none", :authorization=>"none", :form_builder=>"none", :starter_app=>"home_app", :rvmrc=>false, :quiet_assets=>true, :local_env_file=>true, :better_errors=>true, :ban_spiders=>true, :jsruntime=>false}
+This project accepts user registration and sends a confirmation email. We would
+like to schedule a followup email, if possible. There is a daily email to the
+admin listing new users and changing the user's bikeshed limit causes a
+potentially long calculation. There is no background processing in the master
+branch, and sidekiq is used in the 'sidekiq' branch.
 
-________________________
+You can see the difference between the two branches with 
 
-License
+$ git diff master sidekiq
+
+The doc/links.txt file contains a list of links to articles about installing,
+using, and testing sidekiq in Rails apps.
+
+Please send pull requests for new branches using other background processing
+frameworks.
+
+License: MIT
